--- a/main.css
+++ b/main.css
@@ -16,3 +16,13 @@ div {
 #red {
   border-top-color: #f00;
 }
+
+#orange {
+  border-top-color: #ffa500;
+}
+#yellow {
+  border-top-color: #ff0;
+}
+#green {
+  border-top-color: #00bc3f;
+}
