--- a/main.css
+++ b/main.css
@@ -10,7 +10,6 @@ div {
   border-bottom-color: transparent; /* and the bottom of the circle */
 }
 
-/* Red: #f00; Orange: #ffa500; Yellow: #ff0; Green: #00bc3f; Blue: #06f; Indigo: #8a2be2; Violet: #d300c9 */
 
 
 #red {
@@ -26,3 +25,14 @@ div {
 #green {
   border-top-color: #00bc3f;
 }
+
+#blue {
+  border-top-color: #06f;
+}
+#indigo {
+  border-top-color: #8a2be2;
+}
+#violet {
+  border-top-color: #d300c9;
+}
+/* Red: #f00; Orange: #ffa500; Yellow: #ff0; Green: #00bc3f; Blue: #06f; Indigo: #8a2be2; Violet: #d300c9 */
